# FastAPI_practice_2

./: .env  README.md  alembic.ini  containers.py  main.py  pyproject.toml
common/: auth.py
migrations/versions/: 2025_07_31_1003-104bc71bb08a_add_user_table.py  2025_07_31_1034-8e82a4ee52c7_add_user_table.py  2025_07_31_1142-b52d96b19193_user_add_memo.py
user/application/: user_service.py
user/domain/: user.py
user/domain/repository/: user_repo.py
user/infra/repository/: user_repo.py
user/interface/controllers/: user_controller.py
